--- a/multimedia.html
+++ b/multimedia.html
@@ -74,7 +74,7 @@
                         <img src="img/v1.jpg" alt="" width="100%">
                     </div>
                     <div class="col3">
-                        <img src="img/v2.jpg" alt="" width="100%">
+                        <img src="img/v.jpg" alt="" width="100%">
                     </div>
                     <div class="col3">
                         <img src="img/v3.jpg" alt="" width="100%">
