--- a/enlaces.html
+++ b/enlaces.html
@@ -62,7 +62,7 @@
         </header>
         <main class="shadow">
             <div class="px-3">
-                <h1 class="text-center bg-azul-o text-white py-3">HTML5 & CSS3</h1>
+                <h1 class="text-center bg-blanco text-black py-3">HTML5 & CSS3</h1>
             </div>
             <div class="px-3">
                 <hr>
@@ -85,7 +85,7 @@
                     <h3>Enlace a una dirección de correo</h3>
                     <p><a href="mailto:webmaster@azarquiel.es">Sugerencia al web master</a></p>
                     <h3>Enlace a una ejecutar un programa javascript de correo</h3>
-                    <p><a href="javascript:alert('Hola titi...')">Click me</a></p>
+                    <p><a href="javascript:alert('Holaaaa')">Click me</a></p>
                     <h3>Descarga plano de Toledo</h3>
                     <p><a href="pdf/toledo.pdf">Descargar plano</a></p>
                     <h3>Enlace de marcador: Sirve para posicionarse en un lugar concreto de la web.</h3>
@@ -96,7 +96,7 @@
 
         </main>
         <footer>
-            <h1 class="bg-azul-o text-center text-white py-3">&copy; Paula Franco</h1>
+            <h1 class="bg-blanco text-center text-black py-3">&copy; Paula Franco</h1>
         </footer>
     </div>
     <script>
