--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </header>
         <main class="shadow">
             <div class="px-3">
-                <h1 class="text-center bg-azul-o text-white py-3">HTML5 & CSS3</h1>
+                <h1 class="text-center bg-blanco text-black py-3">HTML5 & CSS3</h1>
             </div>
             <div class="px-3">
                 <hr>
@@ -69,13 +69,13 @@
             <div class="p-3">
                 <div id="home" class="py-3">
                     <h2 class="text-center">HOME</h2>
-                    <img src="img/logohtmlcss.jpg" alt="" width="100%">
+                    <img src="" alt="" width="100%"> <!--IMG-->
                 </div>
             </div>
 
         </main>
         <footer>
-            <h1 class="bg-azul-o text-center text-white py-3">&copy; Paula Franco</h1>
+            <h1 class="bg-blanco text-center text-black py-3">&copy; Paula Franco</h1>
         </footer>
     </div>
     <script>
