--- a/multimedia.html
+++ b/multimedia.html
@@ -61,7 +61,7 @@
         </header>
         <main class="shadow">
             <div class="px-3">
-                <h1 class="text-center bg-azul-o text-white py-3">HTML5 & CSS3</h1>
+                <h1 class="text-center bg-blanco text-black py-3">HTML5 & CSS3</h1>
             </div>
             <div class="px-3">
                 <hr>
@@ -98,7 +98,7 @@
 
         </main>
         <footer>
-            <h1 class="bg-azul-o text-center text-white py-3">&copy; Paula Franco</h1>
+            <h1 class="bg-blanco text-center text-black py-3">&copy; Paula Franco</h1>
         </footer>
     </div>
     <script>
