--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container shadow">
         <header>
             <div class="row align-items-center">
-                <div class="col-3"><img src="img/logoiesfseif.png" alt="logo" width="250"></div>
+                <div class="col-3"><img src="img/Nasa.png" alt="logo" width="100"></div>
                 <div class="col-9">
                     <span id="btnmenu" onclick="opendrawer()">&#9776;</span>
                     <nav id="menu">
@@ -69,7 +69,7 @@
             <div class="p-3">
                 <div id="home" class="py-3">
                     <h2 class="text-center">HOME</h2>
-                    <img src="" alt="" width="100%"> <!--IMG-->
+                    <img src="img/home.jpg" alt="" width="60%"> <!--IMG-->
                 </div>
             </div>
 
