--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="p-3">
                 <div id="home" class="py-3">
                     <h2 class="text-center">HOME</h2>
-                    <img src="img/home.jpg" alt="" width="60%" class="img-center"> <!--IMG-->
+                    <img src="img/prueba.png" alt="" width="70%" class="img-center"> <!--IMG-->
                 </div>
             </div>
 
