--- a/tablas.html
+++ b/tablas.html
@@ -294,7 +294,7 @@
                             <td class="ipe">IPE- <br> Marín Ca, RoMa <br> (1 B-302)</td>
                         </tr>
                         <tr>
-                            <td></td>
+                            <td class="blanco"></td>
                             <th colspan="5">recreo</th>
                         </tr>
                         <tr>
