--- a/enlaces.html
+++ b/enlaces.html
@@ -89,7 +89,7 @@
                     <h3>Descarga plano de Toledo</h3>
                     <p><a href="pdf/toledo.pdf">Descargar plano</a></p>
                     <h3>Enlace de marcador: Sirve para posicionarse en un lugar concreto de la web.</h3>
-                    <a href="#top"><img src="img/flechAR.png" alt=""></a>
+                    <a href="#top"><img src="img/flechAr.png" alt=""></a>
 
                 </div>
             </div>
