--- a/enlaces.html
+++ b/enlaces.html
@@ -77,7 +77,7 @@
                     <h3>Enlace a una página de internet</h3>
                     <p><a href="https://www.google.com/">Ir a Google</a></p>
                     <h3>Enlace a una página de internet desde una imagen</h3>
-                    <p><a href="https://www.renfe.es"><img src="img/LogoRenfe.jpg" alt="Logo renfe"></a></p>
+                    <p><a href="https://www.nasa.gov/"><img src="img/nasalogo.png" alt="Logo Nasa"></a></p>
                     <h3>Enlace a una página en una nueva pestaña</h3>
                     <p><a href="https://www.toledo.es" target="_blank">Ir a Toledo</a> Lo hemos realizado con el atributo
                         <span class="atributo">target</span> con el valor <span class="atributo">_blank</span>
@@ -89,7 +89,7 @@
                     <h3>Descarga plano de Toledo</h3>
                     <p><a href="pdf/toledo.pdf">Descargar plano</a></p>
                     <h3>Enlace de marcador: Sirve para posicionarse en un lugar concreto de la web.</h3>
-                    <a href="#top"><img src="img/flechAR.png" alt=""></a>
+                    <a href="#top"><img src="img/flechAr.png" alt=""></a>
 
                 </div>
             </div>
